# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuurikuvaus.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaativuusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: 44c364c4-b3ef-42b4-ba32-7f78617e99b9.jfif
src/: codeops.py  fileops.py  gui.py  index.py
src/logic/: codeops.py  database.py  fileops.py
src/tests/: codeops_test.py  fileops_test.py
src/ui/: gui.py
